feat: migrate to weather and location records