@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mapstruct.factory.Mappers;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
@@ -36,16 +35,16 @@ public class LocationEntityMapperTest {
     Location location = locationEntityMapper.mapToLocationWithoutWeather(locationEntity);
 
     assertThat(location)
-        .returns(locationEntity.getId(), Location::getLocationId)
-        .returns(locationEntity.getUuid(), Location::getUuid)
-        .returns(locationEntity.getLatitude(), Location::getLatitude)
-        .returns(locationEntity.getLongitude(), Location::getLongitude)
-        .returns(locationEntity.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
-        .returns(locationEntity.getLocalZipCode(), Location::getLocalZipCode)
-        .returns(locationEntity.getCityName(), Location::getCityName)
-        .returns(locationEntity.getCountry(), Location::getCountry)
-        .returns(locationEntity.getCountryCode(), Location::getCountryCode)
-        .returns(locationEntity.getLastImportAt(), Location::getLastImportAt)
+        .returns(locationEntity.getId(), Location::locationId)
+        .returns(locationEntity.getUuid(), Location::uuid)
+        .returns(locationEntity.getLatitude(), Location::latitude)
+        .returns(locationEntity.getLongitude(), Location::longitude)
+        .returns(locationEntity.getOpenWeatherApiLocationCode(), Location::openWeatherApiLocationCode)
+        .returns(locationEntity.getLocalZipCode(), Location::localZipCode)
+        .returns(locationEntity.getCityName(), Location::cityName)
+        .returns(locationEntity.getCountry(), Location::country)
+        .returns(locationEntity.getCountryCode(), Location::countryCode)
+        .returns(locationEntity.getLastImportAt(), Location::lastImportAt)
         .returns(locationEntity.getWeather(), l -> new ArrayList<Location>());
   }
 
@@ -58,18 +57,18 @@ public class LocationEntityMapperTest {
     assertThat(actualLocationList).hasSize(1);
     Location actualLocation = actualLocationList.get(0);
     assertThat(actualLocation)
-        .returns(expectedLocation.getId(), Location::getLocationId)
-        .returns(expectedLocation.getUuid(), Location::getUuid)
-        .returns(expectedLocation.getLatitude(), Location::getLatitude)
-        .returns(expectedLocation.getLongitude(), Location::getLongitude)
-        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
-        .returns(expectedLocation.getLocalZipCode(), Location::getLocalZipCode)
-        .returns(expectedLocation.getCityName(), Location::getCityName)
-        .returns(expectedLocation.getCountry(), Location::getCountry)
-        .returns(expectedLocation.getCountryCode(), Location::getCountryCode)
-        .returns(expectedLocation.getLastImportAt(), Location::getLastImportAt);
+        .returns(expectedLocation.getId(), Location::locationId)
+        .returns(expectedLocation.getUuid(), Location::uuid)
+        .returns(expectedLocation.getLatitude(), Location::latitude)
+        .returns(expectedLocation.getLongitude(), Location::longitude)
+        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::openWeatherApiLocationCode)
+        .returns(expectedLocation.getLocalZipCode(), Location::localZipCode)
+        .returns(expectedLocation.getCityName(), Location::cityName)
+        .returns(expectedLocation.getCountry(), Location::country)
+        .returns(expectedLocation.getCountryCode(), Location::countryCode)
+        .returns(expectedLocation.getLastImportAt(), Location::lastImportAt);
 
-    assertThat(actualLocation.getWeather()).isEmpty();
+    assertThat(actualLocation.weather()).isNull();
   }
 
   @Test
@@ -79,18 +78,18 @@ public class LocationEntityMapperTest {
     Location actualLocation = locationEntityMapper.mapToLocation(expectedLocation);
 
     assertThat(actualLocation)
-        .returns(expectedLocation.getId(), Location::getLocationId)
-        .returns(expectedLocation.getUuid(), Location::getUuid)
-        .returns(expectedLocation.getLatitude(), Location::getLatitude)
-        .returns(expectedLocation.getLongitude(), Location::getLongitude)
-        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
-        .returns(expectedLocation.getLocalZipCode(), Location::getLocalZipCode)
-        .returns(expectedLocation.getCityName(), Location::getCityName)
-        .returns(expectedLocation.getCountry(), Location::getCountry)
-        .returns(expectedLocation.getCountryCode(), Location::getCountryCode)
-        .returns(expectedLocation.getLastImportAt(), Location::getLastImportAt);
+        .returns(expectedLocation.getId(), Location::locationId)
+        .returns(expectedLocation.getUuid(), Location::uuid)
+        .returns(expectedLocation.getLatitude(), Location::latitude)
+        .returns(expectedLocation.getLongitude(), Location::longitude)
+        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::openWeatherApiLocationCode)
+        .returns(expectedLocation.getLocalZipCode(), Location::localZipCode)
+        .returns(expectedLocation.getCityName(), Location::cityName)
+        .returns(expectedLocation.getCountry(), Location::country)
+        .returns(expectedLocation.getCountryCode(), Location::countryCode)
+        .returns(expectedLocation.getLastImportAt(), Location::lastImportAt);
 
-    assertThat(actualLocation.getWeather()).hasSize(1);
+    assertThat(actualLocation.weather()).hasSize(1);
   }
 
   @Test
@@ -100,21 +99,21 @@ public class LocationEntityMapperTest {
     List<Location> actualLocationList = locationEntityMapper.mapToLocationList(List.of(expectedLocation));
 
     assertThat(actualLocationList).hasSize(1);
-    Location actualLocation = actualLocationList.get(0);
+    Location actualLocation = actualLocationList.getFirst();
 
     assertThat(actualLocation)
-        .returns(expectedLocation.getId(), Location::getLocationId)
-        .returns(expectedLocation.getUuid(), Location::getUuid)
-        .returns(expectedLocation.getLatitude(), Location::getLatitude)
-        .returns(expectedLocation.getLongitude(), Location::getLongitude)
-        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
-        .returns(expectedLocation.getLocalZipCode(), Location::getLocalZipCode)
-        .returns(expectedLocation.getCityName(), Location::getCityName)
-        .returns(expectedLocation.getCountry(), Location::getCountry)
-        .returns(expectedLocation.getCountryCode(), Location::getCountryCode)
-        .returns(expectedLocation.getLastImportAt(), Location::getLastImportAt);
+        .returns(expectedLocation.getId(), Location::locationId)
+        .returns(expectedLocation.getUuid(), Location::uuid)
+        .returns(expectedLocation.getLatitude(), Location::latitude)
+        .returns(expectedLocation.getLongitude(), Location::longitude)
+        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::openWeatherApiLocationCode)
+        .returns(expectedLocation.getLocalZipCode(), Location::localZipCode)
+        .returns(expectedLocation.getCityName(), Location::cityName)
+        .returns(expectedLocation.getCountry(), Location::country)
+        .returns(expectedLocation.getCountryCode(), Location::countryCode)
+        .returns(expectedLocation.getLastImportAt(), Location::lastImportAt);
 
-    assertThat(actualLocation.getWeather()).hasSize(1);
+    assertThat(actualLocation.weather()).hasSize(1);
   }
 
 }
