@@ -3,7 +3,10 @@ package westmeijer.oskar.weatherapi.overview.service.mapper;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.UUID;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -27,18 +30,18 @@ public class OverviewMapperTest {
   @Test
   void shouldMapToOverview() {
     Location expectedLocation = TestLocationFactory.location();
-    Weather expectedWeather = expectedLocation.getWeather().get(0);
+    Weather expectedWeather = expectedLocation.weather().getFirst();
 
     Overview actualOverview = overviewMapper.mapToOverview(expectedLocation);
 
     assertThat(actualOverview)
-        .returns(expectedLocation.getLocationId(), Overview::locationId)
-        .returns(expectedLocation.getCountryCode(), Overview::countryCode)
-        .returns(expectedLocation.getCityName(), Overview::cityName)
-        .returns(expectedWeather.getTemperature(), Overview::temperature)
-        .returns(expectedWeather.getHumidity(), Overview::humidity)
-        .returns(expectedWeather.getWindSpeed(), Overview::windSpeed)
-        .returns(expectedWeather.getRecordedAt(), Overview::recordedAt);
+        .returns(expectedLocation.locationId(), Overview::locationId)
+        .returns(expectedLocation.countryCode(), Overview::countryCode)
+        .returns(expectedLocation.cityName(), Overview::cityName)
+        .returns(expectedWeather.temperature(), Overview::temperature)
+        .returns(expectedWeather.humidity(), Overview::humidity)
+        .returns(expectedWeather.windSpeed(), Overview::windSpeed)
+        .returns(expectedWeather.recordedAt(), Overview::recordedAt);
   }
 
   @Test
@@ -62,9 +65,17 @@ public class OverviewMapperTest {
 
   @Test
   void throwsIllegalOnTooManyWeather() {
-    Location expectedLocation = TestLocationFactory.locationWithoutWeather();
-    expectedLocation.addWeather(TestWeatherFactory.weather());
-    expectedLocation.addWeather(TestWeatherFactory.weather());
+    Location expectedLocation = new Location(1,
+        UUID.randomUUID(),
+        "1234",
+        "5678",
+        "Luebeck",
+        "Germany",
+        "GER",
+        "51.659088",
+        "6.966170",
+        Instant.now().truncatedTo(ChronoUnit.MICROS),
+        List.of(TestWeatherFactory.weather(), TestWeatherFactory.weather()));
 
     assertThatThrownBy(() -> overviewMapper.mapToOverviewList(List.of(expectedLocation)))
         .isInstanceOf(IllegalArgumentException.class)
@@ -79,15 +90,13 @@ public class OverviewMapperTest {
   }
 
   @Test
-  void throwsNpeOnMissingWeather() {
-    Location location = TestLocationFactory.locationWithoutWeather();
-    location.setWeather(null);
+  void throwsIllegalArgumentOnMissingWeather() {
+    Location location = TestLocationFactory.locationWithNullWeather();
 
     assertThatThrownBy(() -> overviewMapper.mapToOverview(location))
         .isInstanceOf(NullPointerException.class)
         .hasMessageContaining("weather is required");
   }
-
 
 
 }
